--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./styles.css" />
 		<script src="script.js" defer></script>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Clock</title>
 	</head>
 	<body>
